--- a/src/com/ats/gui/alert/CredentialsAlert.mxml
+++ b/src/com/ats/gui/alert/CredentialsAlert.mxml
@@ -8,41 +8,44 @@
 	<panels:TitlePanel id="inputPanel" label="Genymotion credentials" height="100%" width="100%"/>
 	
 	<panels:BottomButtons width="100%">
-		<!-- <buttons:SmallButton label="Ok" click="setCredentials()" fontSize="14"/> -->
+		<buttons:SmallButton label="Ok" click="setCredentials()" fontSize="14"/>
 		<buttons:SmallButton label="Cancel" click="cancelButtonHandler(event)" fontSize="14"/>
 	</panels:BottomButtons>
 	
 	<fx:Script>
 		<![CDATA[
-			import mx.events.FlexEvent;
-			import mx.managers.PopUpManager;
+			import com.ats.managers.gmsaas.GmsaasManager;
+			import com.ats.managers.gmsaas.GmsaasManagerEvent;
 			
-			import flash.filters.BitmapFilterQuality;
+			import mx.events.CloseEvent;
+			import mx.events.FlexEvent;
+			
+			import spark.components.Alert;
 			import spark.filters.DropShadowFilter;
+			import flash.filters.BitmapFilterQuality;
 			
 			public static const dropShadow:DropShadowFilter = new DropShadowFilter(4.0, 45, 0x000000, 0.4, 8.0, 8.0, 0.9, BitmapFilterQuality.HIGH, false, false, false);
 			
-			public var successCallback:Function;
-			public var cancelCallback:Function;
-			
-			private var content:CredentialsForm;
+			private var content:CredentialsContent;
 			
 			private function cancelButtonHandler(event:MouseEvent):void {
-				if (cancelCallback != null) {
-					cancelCallback(this)
-				} else {
-					PopUpManager.removePopUp(this)
-				}
+				dispatchEvent(new CloseEvent(CloseEvent.CLOSE, false, false, Alert.CANCEL));
 			}
 			
-			/* private function setCredentials():void {
-				
-				content.enabled = false;
-				
+			private function setCredentials():void {
+
 				var login:String = content.login
 				var password:String = content.password
 				
 				if (login.length > 0 &&  password.length > 0) {
+					
+					content.enabled = false;
+					
+					var manager:GmsaasManager = new GmsaasManager()
+					manager.addEventListener(GmsaasManagerEvent.ERROR, credentialErrorHandler, false, 0, true);
+					manager.addEventListener(GmsaasManagerEvent.COMPLETED, credentialCompletedHandler, false, 0, true);
+					manager.login(login, password);
+					
 					
 					/*var alert:CredentialsAlert = this
 					GmsaasManager.getInstance().login(login, password, function(result:Object, error:String):void {
@@ -64,18 +67,31 @@
 				}
 				
 				//infoLabel.text = "Connecting..."
-			} */
+			}
+			
+			private function credentialErrorHandler(ev:GmsaasManagerEvent):void{
+				ev.currentTarget.removeEventListener(GmsaasManagerEvent.ERROR, credentialErrorHandler);
+				ev.currentTarget.removeEventListener(GmsaasManagerEvent.COMPLETED, credentialCompletedHandler);
+
+				content.error = ev.error;
+			}
+			
+			private function credentialCompletedHandler(ev:GmsaasManagerEvent):void{
+				ev.currentTarget.removeEventListener(GmsaasManagerEvent.ERROR, credentialErrorHandler);
+				ev.currentTarget.removeEventListener(GmsaasManagerEvent.COMPLETED, credentialCompletedHandler);
+				dispatchEvent(new CloseEvent(CloseEvent.CLOSE, false, false, Alert.YES));
+			}
 			
 			protected function creationCompleteHandler(event:FlexEvent):void
 			{
-				content = new CredentialsForm();
+				content = new CredentialsContent();
 				content.addEventListener("enterKey", enterKeyHandler, false, 0, true);
 				inputPanel.addContent(content);
 			}
 			
 			private function enterKeyHandler(ev:Event):void{
 				content.removeEventListener("enterKey", enterKeyHandler);
-				// setCredentials()
+				setCredentials()
 			}
 			
 		]]>
