--- a/src/com/ats/gui/alert/CredentialsContent.mxml
+++ b/src/com/ats/gui/alert/CredentialsContent.mxml
@@ -16,6 +16,11 @@
 				inputLogin.focus();
 			}
 			
+			public function set error(value:String):void{
+				enabled = true;
+				
+			}
+			
 			protected function login_keyDownHandler(event:KeyboardEvent):void
 			{
 				if(event.keyCode == Keyboard.TAB || event.keyCode == Keyboard.ENTER){
@@ -48,8 +53,7 @@
 			
 		]]>
 	</fx:Script>
-	
-	
+		
 	<text:InputText id="inputLogin" label="Login" width="100%" keyDown="login_keyDownHandler(event)" tabIndex="0"/>
 	<text:InputText id="inputPassword" label="Password" width="100%" tabIndex="1" keyDown="password_keyDownHandler(event)"/>
 	
