--- a/src/com/ats/gui/panel/SettingsForm.mxml
+++ b/src/com/ats/gui/panel/SettingsForm.mxml
@@ -7,112 +7,146 @@
 	
 	<fx:Script>
 		<![CDATA[
-		import com.ats.gui.alert.CredentialsAlert;
-		import com.ats.helpers.Settings;
-		import com.ats.managers.gmsaas.GmsaasInstaller;
-		import com.ats.managers.gmsaas.GmsaasInstallerErrorEvent;
-		import com.ats.managers.gmsaas.GmsaasInstallerProgressEvent;
-		import com.ats.tools.PeerGroupConnection;
-
-		import mx.core.FlexGlobals;
-		import mx.managers.PopUpManager;
-
-		public function reload(peer:PeerGroupConnection):void {
-			msName.text = peer.name;
-			msDescription.text = peer.description;
-
-			pythonFolderPath.text = Settings.getInstance().pythonPath
-
-			gmsaas = GmsaasInstaller.isInstalled()
-		}
-
-		private function set gmsaas(value:Boolean):void {
-			gmsaasUninstallButton.enabled = value
-			gmsaasInstallButton.enabled = !value
-			gmsaasCredentialsButton.enabled = value
-		}
-
-		protected function installGmsaas(event:Event):void {
-			genymotionInfoLabel.text = "Installing..."
-
-			var installer:GmsaasInstaller = new GmsaasInstaller()
-			installer.addEventListener(GmsaasInstallerErrorEvent.ERROR, installerErrorHandler);
-			installer.addEventListener(GmsaasInstallerProgressEvent.PROGRESS, installerProgressHandler);
-			installer.install()
-		}
-
-		protected function uninstallGmsaas(event:Event):void {
-			genymotionInfoLabel.text = "Uninstalling..."
-
-			var installer:GmsaasInstaller = new GmsaasInstaller()
-			installer.addEventListener(GmsaasInstallerErrorEvent.ERROR, installerErrorHandler);
-			installer.addEventListener(GmsaasInstallerProgressEvent.PROGRESS, installerProgressHandler);
-			installer.uninstall()
-		}
-
-		private function installerErrorHandler(event:GmsaasInstallerErrorEvent):void {
-			var installer:GmsaasInstaller = event.currentTarget as GmsaasInstaller
-			installer.removeEventListener(GmsaasInstallerErrorEvent.ERROR, installerErrorHandler);
-			installer.removeEventListener(GmsaasInstallerProgressEvent.PROGRESS, installerProgressHandler);
-
-			genymotionInfoLabel.text = null
-		}
-
-		private function installerProgressHandler(event:GmsaasInstallerProgressEvent):void {
-			var installer:GmsaasInstaller = event.currentTarget as GmsaasInstaller
-
-			switch (event.state) {
-				case GmsaasInstaller.GMSAAS_INSTALLER_STATE_INSTALL_COMPLETED:
-					installer.removeEventListener(GmsaasInstallerErrorEvent.ERROR, installerErrorHandler);
-					installer.removeEventListener(GmsaasInstallerProgressEvent.PROGRESS, installerProgressHandler);
-
-					genymotionInfoLabel.text = null
-					gmsaas = true
-					FlexGlobals.topLevelApplication.genymotionManager.visible = true
-					FlexGlobals.topLevelApplication.genymotionManager.fetchContent()
-					break;
-				case GmsaasInstaller.GMSAAS_INSTALLER_STATE_UNINSTALL_COMPLETED:
-					installer.removeEventListener(GmsaasInstallerErrorEvent.ERROR, installerErrorHandler);
-					installer.removeEventListener(GmsaasInstallerProgressEvent.PROGRESS, installerProgressHandler);
-
-					genymotionInfoLabel.text = null
-					gmsaas = false
-					FlexGlobals.topLevelApplication.genymotionManager.visible = false
-
-					break
+			import com.ats.gui.alert.CredentialsAlert;
+			import com.ats.helpers.Settings;
+			import com.ats.managers.gmsaas.GmsaasInstaller;
+			import com.ats.managers.gmsaas.GmsaasInstallerErrorEvent;
+			import com.ats.managers.gmsaas.GmsaasInstallerProgressEvent;
+			import com.ats.tools.PeerGroupConnection;
+			
+			import mx.core.FlexGlobals;
+			import mx.events.CloseEvent;
+			import mx.managers.PopUpManager;
+			
+			import spark.components.Alert;
+			
+			[Bindable]
+			public var edit:Boolean = false;
+			
+			public function reload(peer:PeerGroupConnection):void {
+				msName.text = peer.name;
+				msDescription.text = peer.description;
+				
+				pythonFolderPath.text = Settings.getInstance().pythonPath
+				genyPanel.clearMessage()
+					
+				gmsaas = GmsaasInstaller.isInstalled()
 			}
-		}
-
-		protected function editCredentials(event:Event):void {
-			const credentialsAlert:CredentialsAlert = new CredentialsAlert();
-			credentialsAlert.successCallback = credentialsCompleteHandler
-			PopUpManager.addPopUp(credentialsAlert, this, true);
-			PopUpManager.centerPopUp(credentialsAlert);
-		}
-
-		private function credentialsCompleteHandler(alert:CredentialsAlert):void {
-			PopUpManager.removePopUp(alert)
-		}
-
-		public function get localName():String {
-			return msName.text
-		}
-
-		public function get description():String {
-			return msDescription.text
-		}
-
-		protected function loadPythonPath_clickHandler(event:MouseEvent):void {
-			var directory:File = Settings.defaultAppFolder;
-			directory.addEventListener(Event.SELECT, pythonFolderSelected);
-			directory.browseForDirectory("Select Python directory");
-		}
-
-		protected function pythonFolderSelected(event:Event):void {
-			event.currentTarget.removeEventListener(Event.SELECT, pythonFolderSelected);
-			Settings.getInstance().pythonFolder = event.target as File
-			pythonFolderPath.text = Settings.getInstance().pythonPath
-		}
+			
+			private function set gmsaas(value:Boolean):void {
+				gmsaasUninstallButton.enabled = value
+				gmsaasInstallButton.enabled = !value
+					gmsaasCredentialsButton.enabled = value
+			}
+			
+			protected function installGmsaas(event:Event):void {
+				genyPanel.infoMessage = "Installing ..."
+				edit = true;
+				
+				var installer:GmsaasInstaller = new GmsaasInstaller()
+				installer.addEventListener(GmsaasInstallerErrorEvent.ERROR, installerErrorHandler);
+				installer.addEventListener(GmsaasInstallerProgressEvent.PROGRESS, installerProgressHandler);
+				installer.install()
+			}
+			
+			protected function uninstallGmsaas(event:Event):void {
+				genyPanel.infoMessage = "Uninstalling ..."
+				edit = true;
+				
+				var installer:GmsaasInstaller = new GmsaasInstaller()
+				installer.addEventListener(GmsaasInstallerErrorEvent.ERROR, installerErrorHandler);
+				installer.addEventListener(GmsaasInstallerProgressEvent.PROGRESS, installerProgressHandler);
+				installer.uninstall()
+			}
+			
+			private function installerErrorHandler(event:GmsaasInstallerErrorEvent):void {
+				var installer:GmsaasInstaller = event.currentTarget as GmsaasInstaller
+				installer.removeEventListener(GmsaasInstallerErrorEvent.ERROR, installerErrorHandler);
+				installer.removeEventListener(GmsaasInstallerProgressEvent.PROGRESS, installerProgressHandler);
+				
+				genyPanel.infoMessage = event.error.message
+				edit = false;
+			}
+			
+			private function installerProgressHandler(event:GmsaasInstallerProgressEvent):void {
+				var installer:GmsaasInstaller = event.currentTarget as GmsaasInstaller
+				genyPanel.infoMessage = event.state
+					
+				switch (event.state) {
+					case GmsaasInstaller.GMSAAS_INSTALLER_STATE_INSTALL_COMPLETED:
+						installer.removeEventListener(GmsaasInstallerErrorEvent.ERROR, installerErrorHandler);
+						installer.removeEventListener(GmsaasInstallerProgressEvent.PROGRESS, installerProgressHandler);
+						
+						installCredentials();					
+						
+						break;
+					case GmsaasInstaller.GMSAAS_INSTALLER_STATE_UNINSTALL_COMPLETED:
+						installer.removeEventListener(GmsaasInstallerErrorEvent.ERROR, installerErrorHandler);
+						installer.removeEventListener(GmsaasInstallerProgressEvent.PROGRESS, installerProgressHandler);
+						
+						genyPanel.infoMessage = ""
+						gmsaas = false
+						FlexGlobals.topLevelApplication.genymotionActivated = false
+						
+						edit = false;
+						break
+				}
+			}
+			
+			private function installCredentials():void{
+				const credentialsAlert:CredentialsAlert = new CredentialsAlert();
+				credentialsAlert.addEventListener(CloseEvent.CLOSE, installCredentialsHandler, false, 0, true);
+				ModalPopupManager.addPopup(this, credentialsAlert);
+			}
+			
+			private function installCredentialsHandler(ev:CloseEvent):void{
+				ev.currentTarget.removeEventListener(CloseEvent.CLOSE, installCredentialsHandler);
+				ModalPopupManager.removePopup(ev.currentTarget as CredentialsAlert);
+				edit = false;
+				
+				if(ev.detail == Alert.YES){
+					gmsaas = true
+					FlexGlobals.topLevelApplication.genymotionActivated = true;
+				}else{
+					new GmsaasInstaller().uninstall();
+					genyPanel.infoMessage = "Install aborted !"
+				}
+			}
+			
+			protected function editCredentials(event:Event):void {
+				
+				edit = true;
+				
+				const credentialsAlert:CredentialsAlert = new CredentialsAlert();
+				credentialsAlert.addEventListener(CloseEvent.CLOSE, credentialsCompleteHandler, false, 0, true);
+				
+				ModalPopupManager.addPopup(this, credentialsAlert);
+			}
+			
+			private function credentialsCompleteHandler(ev:CloseEvent):void {
+				edit = false
+				ModalPopupManager.removePopup(ev.currentTarget as CredentialsAlert);
+			}
+			
+			public function get localName():String {
+				return msName.text
+			}
+			
+			public function get description():String {
+				return msDescription.text
+			}
+			
+			protected function loadPythonPath_clickHandler(event:MouseEvent):void {
+				var directory:File = Settings.defaultAppFolder;
+				directory.addEventListener(Event.SELECT, pythonFolderSelected);
+				directory.browseForDirectory("Select Python directory");
+			}
+			
+			protected function pythonFolderSelected(event:Event):void {
+				event.currentTarget.removeEventListener(Event.SELECT, pythonFolderSelected);
+				Settings.getInstance().pythonFolder = event.target as File
+				pythonFolderPath.text = Settings.getInstance().pythonPath
+			}
 		]]>
 	</fx:Script>
 	<text:InputText id="msName" label="Mobile Station name" width="100%"/>
@@ -122,16 +156,15 @@
 		<text:InputText id="pythonFolderPath" label="Python folder" width="100%"/>
 		<buttons:SmallButton click="loadPythonPath_clickHandler(event)"/>
 	</s:HGroup>
-	<s:Spacer height="16"/>
+	<s:Spacer height="12"/>
 	<s:Group width="100%">
-		<panels:InsetPanel label="Genymotion Cloud" width="100%" height="100%"/>
+		<panels:InsetPanel id="genyPanel" label="Genymotion Cloud" width="100%" height="100%"/>
 		<s:HGroup width="100%" top="26" paddingLeft="7" paddingRight="5" paddingBottom="5"
 				  horizontalAlign="center">
 			<buttons:SmallButton id="gmsaasInstallButton" label="Install components" click="installGmsaas(event)" fontSize="12"/>
 			<buttons:SmallButton id="gmsaasCredentialsButton" label="Set credentials" click="editCredentials(event)" fontSize="12"/>
 			<buttons:SmallButton id="gmsaasUninstallButton" label="Uninstall" click="uninstallGmsaas(event)" fontSize="12"/>
 		</s:HGroup>
-		<s:Label id="genymotionInfoLabel" color="white"/>
 	</s:Group>
 	<s:Spacer height="10"/>
 	<text:InputText label="Apple development team ID" width="100%" enabled="false"/>
