--- a/src/com/ats/gui/alert/CredentialsContent.mxml
+++ b/src/com/ats/gui/alert/CredentialsContent.mxml
@@ -11,14 +11,44 @@
 	
 	<fx:Script>
 		<![CDATA[
+			import com.greensock.TweenMax;
 			protected function addedHandler(event:Event):void
 			{
 				inputLogin.focus();
 			}
 			
 			public function set error(value:String):void{
-				enabled = true;
+				info1.text = "Login to Genymotion Cloud failed !";
+				info2.text = "(Ok to try again, Cancel to abort)"
+			}
+			
+			public function retry():void{
+				inputLogin.visible = true;
+				inputPassword.visible = true;
+				inputLogin.includeInLayout = true;
+				inputPassword.includeInLayout = true;
 				
+				inputLogin.focus();
+				inputPassword.text = "";
+				
+				infoGroup.includeInLayout = false;
+				infoGroup.visible = false;
+			}
+			
+			public function wait():void{
+				inputLogin.visible = false;
+				inputPassword.visible = false;
+				inputLogin.includeInLayout = false;
+				inputPassword.includeInLayout = false;
+				
+				infoGroup.includeInLayout = true;
+				infoGroup.visible = true;
+				
+				info1.text = "Connecting to Genymotion cloud"
+				info2.text = "please wait ..."
+					
+				TweenMax.fromTo(info1, 0.2, {visible:false}, {visible:true})
+				TweenMax.fromTo(info2, 0.6, {visible:false}, {visible:true})
 			}
 			
 			protected function login_keyDownHandler(event:KeyboardEvent):void
@@ -57,4 +87,8 @@
 	<text:InputText id="inputLogin" label="Login" width="100%" keyDown="login_keyDownHandler(event)" tabIndex="0"/>
 	<text:InputText id="inputPassword" label="Password" width="100%" tabIndex="1" keyDown="password_keyDownHandler(event)"/>
 	
+	<s:VGroup id="infoGroup" paddingTop="10" visible="false" includeInLayout="false" gap="8">
+		<s:Label id="info1" color="0xadb5bd"/>
+		<s:Label id="info2" color="0xadb5bd" fontStyle="italic" fontSize="11"/>
+	</s:VGroup>
 </s:VGroup>
